docs: organize user and technical guides